--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.11.0",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
