--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-datepicker": "^2.11.0",
