--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.4",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
