--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-datepicker": "^2.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-datepicker": "^2.14.0",
+    "react-dom": "^16.13.0",
     "react-moment": "^0.9.7",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "redux": "^4.0.4",
+    "react-scripts": "^3.4.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "serialize-javascript": ">=2.1.1",
+    "serialize-javascript": "^3.0.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
