--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.6.4",
+    "@auth0/auth0-spa-js": "^1.6.5",
     "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-datepicker": "^2.14.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-datepicker": "^2.14.1",
+    "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^3.0.0",
