--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^3.0.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "kind-of": ">=6.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
