--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "kind-of": ">=6.0.3",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "node-forge": ">=0.10.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^2.16.0",
